--- a/contact.html
+++ b/contact.html
@@ -89,25 +89,25 @@
                         </ul>
                     </li>
                     <li class="level1 hover-menu">
-                        <a href="#" title="Social">Social</a>
+                        <a href="#" title="Social">Социальное</a>
                     </li>
                     <li class="level1 hover-menu">
-                        <a href="#" title="BUSINESS">BUSINESS</a>
+                        <a href="#" title="BUSINESS">БИЗНЕС</a>
                     </li>
                     <li class="level1 hover-menu">
-                        <a href="#" title="GAMING">GAMING</a>
+                        <a href="#" title="GAMING">ИГРОВОЙ</a>
                     </li>
                     <li class="level1 hover-menu">
-                        <a href="#" title="TRAVEL">TRAVEL</a>
+                        <a href="#" title="TRAVEL">ПУТЕШЕСТВИЯ</a>
                     </li>
                     <li class="level1 hover-menu">
-                        <a href="#" title="TECHNOLOGY">TECHNOLOGY</a>
+                        <a href="#" title="TECHNOLOGY">ТЕХНОЛОГИИ</a>
                     </li>
                     <li class="level1 hover-menu">
-                        <a href="#" title="SPORTS">SPORTS</a>
+                        <a href="#" title="SPORTS">СПОРТ</a>
                     </li>
                     <li class="level1 hover-menu">
-                        <a href="#" title="Page">Page</a>
+                        <a href="#" title="Page">Страница</a>
                         <div class="sub-menu list-menu">
                           <div class="main-sub-menu">
                             <div class="col-md-3 col-sm-6">
